--- a/index.html
+++ b/index.html
@@ -4,221 +4,278 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Empresa familiar orientada a ventas por menor en plateria 925">
+  <meta name="keywords" content="ventas por menor de plateria 925">
+  <meta name="author" content="Angeles Moll">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-    rel=" hoja de estilo " integridad=" sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3 " origen
-    cruzado=" anónimo ">
-
+  <link rel="shortcut icon" href="./images/favicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&amp;display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/8fce408b6e.js" crossorigin="anonymous"></script>
   <title>Maria Medina Platería</title>
-  <!-- cambio link css -->
-  <link rel="stylesheet" href="./style.css/main.css">
 </head>
 
 <body>
-  <div class="grilla">
-    <header class="header">
-      <!-- comentar iconos -->
-      <!-- <i>icono de whatapp</i>
-        <i>icono de facebook</i>
-        <i>icono de instagram</i>
-        <i>icono de llamada</i> -->
+  <div class="page-layout">
+    <header>
+      <div class="preheader d-none d-md-block text-md-end px-3 py-1">
+        <ul class="d-inline-flex">
+          <li>
+            <p><strong>Telefono:</strong></p>
+            <!-- tel: te da la opcion para abrir alguna app p llamar o en mobile llamar directo  -->
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i> 2235301696
+            </a>
+          </li>
+        </ul>
+      </div>
 
-
-      <img src="./img/logo maria medina 2.jpg" alt="Logo" class="logo" style="max-width: 150px">
-
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="menu navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
+          <!--logo-->
+          <a href="./index.html" class="navbar-brand" title="Maria Medina Plateria">
+            <img src="./img/logo maria medina 2.jpg" alt="Maria Medina Plateria" width="200px" />
+          </a>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
+          <!--menu-->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+            aria-controls="navbarToggler" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+          <div class="navbar-collapse justify-content-end collapse" id="navbarToggler">
+            <!-- links menu pcipal-->
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                <a class="nav-link" href=".//vistas/Nosotros.html">Nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./vistas/Nosotros.html">Nosotros</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="./vistas/Productos.html" id="navbarDropdown" role="button"
-                  data-bs-toggle="Productos" aria-expanded="false">
-                  Productos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li>
-                    <hr class="dropdown-divider">
-                  </li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link" href="./vistas/Productos.html">Productos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./vistas/Galeria.html">Galeria</a>
               </li>
-
               <li class="nav-item">
                 <a class="nav-link" href="./vistas/Contacto.html">Contacto</a>
               </li>
-
-
             </ul>
           </div>
         </div>
       </nav>
-
     </header>
+  </div>
 
-    <main class="main">
-      <!-- Nosotros -->
-      <h2>Nosotros</h2>
-      <div class="Nosotros">
-        <div class="conteiner">
-          <div class="row">
-            <div class="item col-6">
-              <img class="img-fluid" src="./img/mano-con-anillo.jpg" alt="foto de joyeria" style="max-width: 200px">
-            </div>
-            <div class="col-6">
-              <p class="text-center"> Somos una joyeria de la ciudad de Mar Del Plata con mas de 15 años de experiencia. Ofrecemos Compra y
-                venta minorista de Oro y Plateria fina, con cuentas personales.
-                Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos
-                originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas
-                con el mejor diseño y a un costo óptimo.
-              </p>
-            </div>
-          </div>
+  <main>
+    <div id="main-carousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="w-100 d-none d-md-block" src="./img/anillo piedra bordo.jpg" alt="Anillos" />
+          <img class="w-100 d-block d-md-none" src="./img/anillos-dos solos.jpg" alt="Anillos" />
         </div>
-
-      </div>
-
-      <!-- Productos -->
-      <h2>Productos</h2>
-      <div id="Productos">
-        <h2>Anillos</h2>
-        <img src="./img/Anillos.jpg" alt="fotos de anillos" style="max-width: 100px">
-      </div>
-      <div>
-        <img src="./img/Ani.jpg" alt="Anillos" style="width: 100px">
-      </div>
-
-      <div>
-        <h2>Cadenas</h2>
-        <img src="./img/Cadenas.jpg" alt="Cadenas" style="max-width: 100px">
-      </div>
-      <div><img src="./img/CNA.jpg" alt="Cadenas" style="width: 100px"> </div>
-      <div>
-        <h2>Aros</h2>
-        <img src="./img/Aros.jpg" alt="Aros" style="max-width: 100px">
-      </div>
-      <div>
-        <img src="./img/Ars.jpg" alt="Aros" style="width: 100px">
-      </div>
-      <div>
-        <h2>Pulseras</h2>
-        <img src="./img/Pulseras.jpg" alt="Pulseras" style="max-width: 100px">
-      </div>
-      <div>
-        <img src="./img/PULSERAA.jpg" alt="pulseras" style="max-width: 100px">
-      </div>
-
-      <br>
-      <br>
-
-      <!-- Galeria -->
-      <h2>Galeria</h2>
-      <div id="Galeria"></div>
-      <h3>Plata 925</h3>
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="./img/1.jpg" class="d-block w-50" alt="imagen 1">
-          </div>
-          <div class="carousel-item">
-            <img src="./img/2.jpg" class="d-block w-50" alt="imagen 2">
-          </div>
-          <div class="carousel-item">
-            <img src="./img/3.jpg" class="d-block w-50" alt="imagen 3">
-          </div>
-          <div class="carousel-item">
-            <img src="./img/4.jpg" class="d-block w-50" alt="imagen 4">
-          </div>
-          <div class="carousel-item">
-            <img src="./img/5.jpg" class="d-block w-50" alt="imagen 5">
-          </div>
-          <div class="carousel-item">
-            <img src="./img/6.jpg" class="d-block w-50" alt="imagen 6">
-          </div>
-
-
+        <div class="carousel-item">
+          <img class="w-100 d-none d-md-block" src="./img/Anillos.jpg" alt="Anillos" />
+          <img class="w-100 d-block d-md-none" src="./img/Aros.jpg" alt="Aros" />
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-
-      <br>
-
-      <!-- Contacto -->
-      <h2>Contacto</h2>
-      <div id="Contacto"></div>
-      <form action="/action_page.php">
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="fname" value="Maria"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lname" value="Moll"><br><br>
-        <input type="submit" value="Submit">
-      </form>
-    </main>
-
-    <footer class="footer">
-      <div>
-        <img src="" alt="">
-      </div>
-      <div>
-
-        <a href="./index.html">
-          <li>inicio</li>
-        </a>
-        <a href="./vistas/Nosotros.html">
-          <li>Nosotros</li>
-        </a>
-        <a href="./vistas/Productos.html">
-          <li>Productos</li>
-        </a>
-        <a href="./vistas/Galeria.html">
-          <li>Galeria</li>
-        </a>
-        <a href="./vistas/Contacto.html">
-          <li>Contacto</li>
-        </a>
-      </div>
-      <br>
-      <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quisquam facere saepe.</p>
-      </div>
-
-    </footer>
-
-    <div class="copi">
-      Copigrith todos los derechos reservados
+      <button class="carousel-control-prev" type="button" data-bs-target="#main-carousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#main-carousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      </button>
     </div>
 
-    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
-      integridad=" sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin=" anónimo ">
-    </script>
+    <div class="container-fluid py-4">
+      <div class="row align-items-center mb-4">
+        <img class="col-12 col-md-6" src="./img/mano-con-anillo.jpg" alt="mano con anillo" />
+        <div class="col-12 col-md-6">
+          <p> Contamos con la mayor variedad de joyas de plata al por menor. Comprá Anillos, Aros, Dijes, Pulseras,
+            Cadenas, Tobilleras de la mejor calidad y al mejor precio del mercado.
+            Atención personalizada y Stock real actualizado, Pedidos por WhatsApp y online. <strong>Ofrcemos garantía de
+              calidad y seriedad</strong> avalandonos más de 15 años de experiencia.
+          </p>
+        </div>
+      </div>
 
 
+      <main>
+        <!-- NOSOTROS -->
+        <div class="container-fluid py-4 nosotros">
+
+          <div class="row align-items-center mb-4">
+            <h1>Nosotros</h1>
+            <h3>"Maria Medina Plateria"</h3>
+            <p>Somos una empresa<strong>familiar</strong> de la ciudad de Mar Del Plata (provincia de Buenos Aires) con
+              mas de 15 años de experiencia. Ofrecemos Compra y venta minorista de Oro y Plateria fina, con cuentas
+              personales.
+              Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos
+              originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas
+              con el mejor diseño y a un costo óptimo. Trabajamos día a día para superarnos y dar lo mejor de nosotros a
+              nuestros clientes</p>
+          </div>
+
+          <div class="row align-items-center mb-4">
+            <img class="col-12 col-md-6 mb-4" src="./img/anillos-dos solos.jpg" alt="Mano con anillo" />
+            <div class="col-12 col-md-6">
+              <h2>Quince años de trayectoria juntos</h2>
+              <p>La <strong>responsabilidad, capacitación y el compromiso diario</strong> fueron las
+                características
+                que nos permitieron crecer y consolidarnos</p>
+              <p> Más de 15 años de trayectoria y experiencia aseguran calidad. Nuestro objetivo es trabajar con ahínco
+                para acercarte las mejores productos, junto con las tendencias del mercado y ofrecerte todo el
+                asesoramiento y apoyo necesario para hacer realidad tu sueño. </p>
+            </div>
+          </div>
+
+          <div class="row align-items-center">
+            <div class="col-12 col-md-6">
+              <h2>Historia</h2>
+              <p>Paso a paso, sin atajos, con la planificación de nuestras actividades a lo largo de nuestra vida, Maria
+                Medina Plateria, luego de 15 años ha ido adquiriendo el “Oficio de Joyero”, del que ahora podemos
+                legítimamente estar orgullosos. Lo importante, para nosotros, no es el lujo sino la “calidad”, por lo
+                cual pacientemente buscamos el crecimiento.</p>
+            </div>
+            <img class="col-12 col-md-6" src="./img/cuatro anillos.jpg" alt="cuatro anillos de plata" />
+          </div>
+        </div>
+        <!-- PRODUCTOS -->
+        <div class="container-fluid py-4">
+          <h1>Productos</h1>
+          <div class="row mb-4">
+            <div class="col-12 col-md-6">
+              <h2>Anillos</h2>
+              <p>Anillos de Plata Lisa, Plata inflada, plata y piedra, subic y plata rose.</p>
+            </div>
+            <p>ACA DEBERIA PONER IMAGENES CON INFORMACION Y CARACETRISTICA ABAJO DE LOS PRODUCTOS QUE HAY, ANILLOS,
+              CADENAS, PULSERA, AROS. Deberia sacarlo de boostrap</p>
+            <img class="col-12 col-md-6" src="./img/anillos-dos solos.jpg" alt="cuatro anillos de plata" />
+          </div>
+        </div>
+        <img class="col-12 col-md-6" src="./img/1.jpg" alt="cuatro anillos de plata" />
+    </div>
+    <!-- GALERIA DE FOTOS  -->
+    <div class="container-fluid py-4">
+      <h1>Galería de imágenes</h1>
+      <h2>Plata</h2>
+      <div class="row g-4 mb-4">
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/1.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/2.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/3.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/4.jpg" class="img-fluid" alt="Plateria">
+        </div>
+      </div>
+      <div class="row g-4">
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/5.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/6.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/Aros.jpg" class="img-fluid" alt="Plateria">
+        </div>
+        <div class="col-sm-6 col-lg-3">
+          <img src="./img/Ars.jpg" class="img-fluid" alt="Plateria">
+        </div>
+      </div>
+    </div>
+
+    <!-- CONTACTO -->
+
+    <div class="container-fluid py-4">
+      <h1>Contacto</h1>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <form action="mailto:mariamedina143@hotmail.com">
+            <legend>Dejanos tu consulta. Nos comunicaremos a la brevedad.</legend>
+
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" placeholder="Ingrese su nombre" required>
+
+            <label for="tel">Teléfono:</label>
+            <input type="tel" id="tel" name="tel" placeholder="Ingrese su teléfono" required>
+
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required placeholder="Ingrese su e-mail">
+
+            <label for="consulta">Dejanos tu consulta:</label>
+            <textarea id="consulta" name="consulta" rows="4" cols="50"></textarea>
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
+  <!-- FOOTER -->
+  <footer class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-2 logo d-none d-md-block">
+        <a href="./index.html" title="Maria Medina Plateria">
+          <img src="./img/logo maria medina 2.jpg" alt="Maria Medina Logo" width="200px"/>
+        </a>
+      </div>
+      <div class="col-12 col-md-3 links">
+        <ul class="mb-2">
+          <li><a href="./vistas/Nosotros.html">Nosotros</a></li>
+          <li><a href="./vistas/Productos.html">Productos</a></li>
+          <li><a href="./vistas/Galeria.html">Galeria</a></li>
+          <li><a href="./vistas/Contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-4 contact">
+        <ul>
+          <li>
+            <p><strong>Telefono: </strong></p>
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i>
+              <p>2235301696</p>
+            </a>
+          </li>
+          <li>
+              <p>Mar Del Plata (7600), Buenos Aires, Arg.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-3 mb-4 socials text-md-end text-center">
+        <ul class="d-inline-flex">
+          <li class="me-4">
+            <a target="_blank" href="https://www.facebook.com/MM-Plateria-110287013720086" title="Facebook">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="me-4">
+            <a target="_blank" href="https://www.instagram.com/mmplateria" title="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="mailto:mariamedina@hotmail.com" title="E-mail">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <div class="copyrigth text-center px-3 py-1">
+    <p>Copyrigth - 2021 - Maria Medina Medina Todos los derechos reservados</p>
+  </div>
+  <a class="fixed-btn" target="_blank" href="https://web.whatsapp.com/send?phone=+549496102"><i
+      class="fab fa-whatsapp"></i></a>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
