--- a/vistas/Contacto.html
+++ b/vistas/Contacto.html
@@ -2,114 +2,162 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel =" hoja de estilo "
-    integridad =" sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3 " origen cruzado =" anónimo ">
-
-    <title>Maria Medina Platería</title>
-    <link rel="stylesheet" href="../style.css/main.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Empresa familiar orientada a ventas por menor en plateria 925">
+  <meta name="keywords" content="ventas por menor de plateria 925">
+  <meta name="author" content="Angeles Moll">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/favicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&amp;display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/8fce408b6e.js" crossorigin="anonymous"></script>
+  <title>Maria Medina Platería</title>
 </head>
 
 <body>
-    <div class="grilla">
-    <header class="header">
-        <img src="../img/logo maria medina 2.jpg" alt="" style="max-width: 150px">
-        <!-- <i>icono de whatapp</i>
-        <i>icono de facebook</i>
-        <i>icono de instagram</i>
-        <i>icono de llamada</i> -->
+  <div class="page-layout">
+    <header>
+      <div class="preheader d-none d-md-block text-md-end px-3 py-1">
+        <ul class="d-inline-flex">
+          <li>
+            <p><strong>Telefono:</strong></p>
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i> 2235301696
+            </a>
+          </li>
+        </ul>
+      </div>
 
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../vistas/Nosotros.html">Nosotros</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="../vistas/Productos.html" id="navbarDropdown" role="button" data-bs-toggle="Productos" aria-expanded="false">
-                      Productos
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="../vistas/Galeria.html">Galeria</a>
-                  </li>
+      <nav class="menu navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <!--logo-->
+          <a href="../index.html" class="navbar-brand" title="Maria Medina Plateria">
+            <img src="../img/logo maria medina 2.jpg" alt="Maria Medina Plateria" width="200px" />
+          </a>
 
-                  <li class="nav-item">
-                    <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
-                  </li>
+          <!--menu-->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+            aria-controls="navbarToggler" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-
-                </ul>
-              </div>
-            </div>
-          </nav>
+          <div class="navbar-collapse justify-content-end collapse" id="navbarToggler">
+            <!-- links menu pcipal-->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Galeria.html">Galería</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
 
-    <main>
-        <!-- Contacto -->
-        <h2>Contacto</h2>
-        <div id="Contacto"></div>
-        <form action="/action_page.php">
-            <label for="fname">First name:</label><br>
-            <input type="text" id="fname" name="fname" value="Maria"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname" value="Moll"><br><br>
-            <input type="submit" value="Submit">
-        </form>
-    </main>
-    <footer class="footer">
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            
-            <a href="../index.html">
-                <li>inicio</li>
-            </a>
-            <a href="../vistas/Nosotros.html">
-                <li>Nosotros</li>
-            </a>
-            <a href="../vistas/Productos.html">
-                <li>Productos</li>
-            </a>
-            <a href="../vistas/Galeria.html">
-                <li>Galeria</li>
-            </a>
-            <a href="../vistas/Contacto.html">
-                <li>Contacto</li>
-            </a>
-        </div>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quisquam facere saepe.</p>
-        </div>
+  </div>
 
-    </footer>
+  <main>
+     <!-- CONTACTO -->
 
-    <div class="copi">
-        Copigrith todos los derechos reservados
+     <div class="container-fluid py-4">
+      <h1>Contacto</h1>
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <form action="mailto:mariamedina143@hotmail.com">
+            <legend>Dejanos tu consulta. Nos comunicaremos a la brevedad.</legend>
+
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="name" placeholder="Ingrese su nombre" required>
+
+            <label for="tel">Teléfono:</label>
+            <input type="tel" id="tel" name="tel" placeholder="Ingrese su teléfono" required>
+
+            <label for="email">E-mail:</label>
+            <input type="email" id="email" name="email" required placeholder="Ingrese su e-mail">
+
+            <label for="consulta">Dejanos tu consulta:</label>
+            <textarea id="consulta" name="consulta" rows="4" cols="50"></textarea>
+
+            <button type="submit">Enviar</button>
+          </form>
+        </div>
+      </div>
     </div>
+  </main>
+  <!-- FOOTER -->
+  <footer class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-2 logo d-none d-md-block">
+        <a href="../index.html" title="Maria Medina Plateria">
+          <img src="../img/logo maria medina 2.jpg" alt="Maria Medina Logo" width="200px"/>
+        </a>
+      </div>
+      <div class="col-12 col-md-3 links">
+        <ul class="mb-2">
+          <li><a href="../vistas/Nosotros.html">Nosotros</a></li>
+          <li><a href="../vistas/Productos.html">Productos</a></li>
+          <li><a href="../vistas/Galeria.html">Galeria</a></li>
+          <li><a href="../vistas/Contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-4 contact">
+        <ul>
+          <li>
+            <p><strong>Telefono: </strong></p>
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i>
+              <p>2235301696</p>
+            </a>
+          </li>
+          <li>
+              <p>Mar Del Plata (7600), Buenos Aires, Arg.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-3 mb-4 socials text-md-end text-center">
+        <ul class="d-inline-flex">
+          <li class="me-4">
+            <a target="_blank" href="https://www.facebook.com/MM-Plateria-110287013720086" title="Facebook">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="me-4">
+            <a target="_blank" href="https://www.instagram.com/mmplateria" title="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="mailto:mariamedina143@hotmail.com" title="E-mail">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-    <script  src =" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
-    integridad =" sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p "
-    crossorigin =" anónimo " > </script>
+  <div class="copyrigth text-center px-3 py-1">
+    <p>Copyrigth - 2021 - Maria Medina Medina Todos los derechos reservados</p>
+  </div>
+  <a class="fixed-btn" target="_blank" href="https://web.whatsapp.com/send?phone=+549496102"><i
+      class="fab fa-whatsapp"></i></a>
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 </body>
 
