--- a/vistas/Galeria.html
+++ b/vistas/Galeria.html
@@ -2,143 +2,172 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel =" hoja de estilo "
-    integridad =" sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3 " origen cruzado =" anónimo ">
-
-    <title>Maria Medina Platería</title>
-    <link rel="stylesheet" href="../style.css/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="Empresa familiar orientada a ventas por menor en plateria 925">
+  <meta name="keywords" content="ventas por menor de plateria 925">
+  <meta name="author" content="Angeles Moll">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./images/favicon.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&amp;display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/8fce408b6e.js" crossorigin="anonymous"></script>
+  <title>Maria Medina Platería</title>
 </head>
 
 <body>
-    <div class="grilla">
-            <header class="header">
-        <img src="../img/logo maria medina 2.jpg" alt="" style="max-width: 150px">
-        <!-- <i>icono de whatapp</i>
-        <i>icono de facebook</i>
-        <i>icono de instagram</i>
-        <i>icono de llamada</i> -->
+  <div class="page-layout">
+    <header>
+      <div class="preheader d-none d-md-block text-md-end px-3 py-1">
+        <ul class="d-inline-flex">
+          <li>
+            <p><strong>Telefono:</strong></p>
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i> 2235301696
+            </a>
+          </li>
+        </ul>
+      </div>
 
-        <nav class="navbar navbar-expand-lg bg-light">
-          <div class="container-fluid">
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../vistas/Nosotros.html">Nosotros</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="../vistas/Productos.html" id="navbarDropdown" role="button" data-bs-toggle="Productos" aria-expanded="false">
-                    Productos
-                  </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="../vistas/Galeria.html">Galeria</a>
-                </li>
+      <nav class="menu navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <!--logo-->
+          <a href="../index.html" class="navbar-brand" title="Maria Medina Plateria">
+            <img src="../img/logo maria medina 2.jpg" alt="Maria Medina Plateria" width="200px" />
+          </a>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
-                </li>
-              </ul>
-            </div>
+          <!--menu-->
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
+            aria-controls="navbarToggler" aria-expanded="false">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="navbar-collapse justify-content-end collapse" id="navbarToggler">
+            <!-- links menu pcipal-->
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Nosotros.html">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Galeria.html">Galeria</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
+              </li>
+            </ul>
           </div>
-        </nav>
+        </div>
+      </nav>
     </header>
 
 
-    <main>
-        <!-- Galeria -->
-        <h2>Galeria</h2>
-        <div id="Galeria"></div>
 
-        <h3>Plata 925</h3>
+<main>
 
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../img/1.jpg" class="d-block w-50"  alt="imagen 1">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/2.jpg" class="d-block w-50" alt="imagen 2">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/3.jpg" class="d-block w-50" alt="imagen 3">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/4.jpg" class="d-block w-50" alt="imagen 4">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/5.jpg" class="d-block w-50" alt="imagen 5">
-              </div>
-              <div class="carousel-item">
-                <img src="../img/6.jpg" class="d-block w-50" alt="imagen 6">
-              </div>
-
-
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-    </main>
-
-
-    <footer class="footer">
-        <div>
-            <img src="" alt="">
-        </div>
-        <div>
-            
-            <a href="../index.html">
-                <li>inicio</li>
-            </a>
-            <a href="../vistas/Nosotros.html">
-                <li>Nosotros</li>
-            </a>
-            <a href="../vistas/Productos.html">
-                <li>Productos</li>
-            </a>
-            <a href="../vistas/Galeria.html">
-                <li>Galeria</li>
-            </a>
-            <a href="../vistas/Contacto.html">
-                <li>Contacto</li>
-            </a>
-        </div>
-        <br>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quisquam facere saepe.</p>
-        </div>
-
-    </footer>
-
-    <div class="copi">
-        Copigrith todos los derechos reservados
+  </div>
+   <!-- GALERIA DE FOTOS  -->
+   <div class="container-fluid py-4">
+    <h1>Galería de imágenes</h1>
+    <h2>Plata</h2>
+    <div class="row g-4 mb-4">
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/1.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/2.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/3.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/4.jpg" class="img-fluid" alt="Plateria">
+      </div>
     </div>
+    <div class="row g-4">
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/5.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/6.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/Aros.jpg" class="img-fluid" alt="Plateria">
+      </div>
+      <div class="col-sm-6 col-lg-3">
+        <img src="../img/Ars.jpg" class="img-fluid" alt="Plateria">
+      </div>
+    </div>
+  </div>
+</main>
+  <!-- FOOTER -->
+  <footer class="container-fluid pt-4">
+    <div class="row">
+      <div class="col-md-2 logo d-none d-md-block">
+        <a href="../index.html" title="Maria Medina Plateria">
+          <img src="../img/logo maria medina 2.jpg" alt="Maria Medina Logo" width="200px"/>
+        </a>
+      </div>
+      <div class="col-12 col-md-3 links">
+        <ul class="mb-2">
+          <li><a href="../vistas/Nosotros.html">Nosotros</a></li>
+          <li><a href="../vistas/Productos.html">Productos</a></li>
+          <li><a href="../vistas/Galeria.html">Galeria</a></li>
+          <li><a href="../vistas/Contacto.html">Contacto</a></li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-4 contact">
+        <ul>
+          <li>
+            <p><strong>Telefono: </strong></p>
+            <a href="tel:2235301696" title="Telefono">
+              <i class="fab fa-whatsapp"></i>
+              <p>2235301696</p>
+            </a>
+          </li>
+          <li>
+              <p>Mar Del Plata (7600), Buenos Aires, Arg.</p>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-3 mb-4 socials text-md-end text-center">
+        <ul class="d-inline-flex">
+          <li class="me-4">
+            <a target="_blank" href="https://www.facebook.com/MM-Plateria-110287013720086" title="Facebook">
+              <i class="fab fa-facebook-square"></i>
+            </a>
+          </li>
+          <li class="me-4">
+            <a target="_blank" href="https://www.instagram.com/mmplateria" title="Instagram">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a target="_blank" href="mailto:mariamedina143@hotmail.com" title="E-mail">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 
-    <script  src =" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
-        integridad =" sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p "
-        crossorigin =" anónimo " > </script>
+  <div class="copyrigth text-center px-3 py-1">
+    <p>Copyrigth - 2021 - Maria Medina Medina Todos los derechos reservados</p>
+  </div>
+  <a class="fixed-btn" target="_blank" href="https://web.whatsapp.com/send?phone=+549496102"><i
+      class="fab fa-whatsapp"></i></a>
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 </body>
+
 </html>
